tests/snapshots/formats__swf__movie-lzma.swf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ movie-lzma.swf — Flash movie v10, LZMA-compressed  [0x0+0x136]
    Signature: "ZWS"  [0x0+0x3]
    Version: 10  [0x3+0x1]
    File length: 370  [0x4+0x4]
    Compressed length: 293  [0x8+0x4]
    LZMA properties: 5d 00 00 01 00  |]....|  [0xc+0x5]
  ▾ Compressed body — 550×400, 24 fps, 2 frames  [0x11+0x125]
    ▾ Frame size — 550×400 px  [#1:0x0+0x9]
        Nbits: 15
        Xmin: 0 — 0 px
        Xmax: 11000 — 550 px
        Ymin: 0 — 0 px
        Ymax: 8000 — 400 px
      Frame rate: 24 — 8.8 fixed point, frames per second  [#1:0x9+0x2]
      Frame count: 2  [#1:0xb+0x2]
    ▾ Tags  [#1:0xd+0x15d]
      ▾ FileAttributes — 4 bytes  [#1:0xd+0x6]
          Flags: 0x18 [ActionScript3 | HasMetadata]  [#1:0xf+0x4]
      ▾ Metadata — 198 bytes  [#1:0x13+0xcc]
          XML: "<rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"><rdf:Description rdf:about=\"\"><dc:title xmlns:dc=\"http://purl.org/dc/elements/1.1/\">fillyfoal</dc:title></rdf:Description></rdf:RDF>"  [#1:0x19+0xc6]
      ▾ ScriptLimits — 4 bytes  [#1:0xdf+0x6]
          Max recursion depth: 1000  [#1:0xe1+0x2]
          Script timeout (s): 60  [#1:0xe3+0x2]
      ▾ SetBackgroundColor — 3 bytes  [#1:0xe5+0x5]
          Background colour: "#336699"  [#1:0xe7+0x3]
      ▾ DefineBinaryData — 79 bytes  [#1:0xea+0x55]
          Character ID: 1  [#1:0xf0+0x2]
          Reserved: 0  [#1:0xf2+0x4]
        ▾ Data — 2×2, 8-bit RGB  [#1:0xf6+0x49]
            Signature  [#1:0xf6+0x8]
          ▾ IHDR — 2×2, 8-bit RGB  [#1:0xfe+0x19]
              Length: 13  [#1:0xfe+0x4]
              Type: "IHDR" — critical, public, unsafe to copy  [#1:0x102+0x4]
              Width: 2  [#1:0x106+0x4]
              Height: 2  [#1:0x10a+0x4]
              Bit depth: 8  [#1:0x10e+0x1]
              Color type: RGB (0x2)  [#1:0x10f+0x1]
              Compression method: deflate (0x0)  [#1:0x110+0x1]
              Filter method: adaptive (five filter types) (0x0)  [#1:0x111+0x1]
              Interlace method: None (0x0)  [#1:0x112+0x1]
              CRC: 0xfdd49a73 — valid  [#1:0x113+0x4]
          ▾ Image data — 1 IDAT chunk, 16 bytes compressed → 14 bytes of scanlines  [#1:0x117+0x1c]
            ▾ Compressed stream — zlib stream, 16 bytes  [#1:0x11f+0x10]
                CMF: 0x78 — deflate, 32.0 KiB window  [#1:0x11f+0x1]
                FLG: 0x9c — default compression  [#1:0x120+0x1]
            ▾ Scanlines — 2 rows, 7 bytes each
                Row 0: None (0x0)  [#2:0x0+0x7]
                Row 1: None (0x0)  [#2:0x7+0x7]
            ▾ IDAT — 16 bytes  [#1:0x117+0x1c]
                Length: 16  [#1:0x117+0x4]
                Type: "IDAT" — critical, public, unsafe to copy  [#1:0x11b+0x4]
                Data  [#1:0x11f+0x10]
                CRC: 0x8b3f6e84 — valid  [#1:0x12f+0x4]
          ▾ IEND — end of image  [#1:0x133+0xc]
              Length: 0  [#1:0x133+0x4]
              Type: "IEND" — critical, public, unsafe to copy  [#1:0x137+0x4]
              CRC: 0xae426082 — valid  [#1:0x13b+0x4]
      ▾ SymbolClass — 17 bytes  [#1:0x13f+0x13]
          Count: 1  [#1:0x141+0x2]
          FixtureImage: 1
      ▾ DefineSprite — 8 bytes  [#1:0x152+0xa]
          Sprite ID: 2  [#1:0x154+0x2]
          Frame count: 1  [#1:0x156+0x2]
        ▾ Tags  [#1:0x158+0x4]
            ShowFrame — frame 0  [#1:0x158+0x2]
            End — 0 bytes  [#1:0x15a+0x2]
      ▾ FrameLabel — 6 bytes  [#1:0x15c+0x8]
          Label: "start"  [#1:0x15e+0x6]
        ShowFrame — frame 0  [#1:0x164+0x2]
        ShowFrame — frame 1  [#1:0x166+0x2]
        End — 0 bytes  [#1:0x168+0x2]
