tests/snapshots/formats__swf__movie.swf.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ movie.swf — Flash movie v10, 550×400, 24 fps, 2 frames  [0x0+0x172]
    Signature: "FWS"  [0x0+0x3]
    Version: 10  [0x3+0x1]
    File length: 370  [0x4+0x4]
  ▾ Frame size — 550×400 px  [0x8+0x9]
      Nbits: 15
      Xmin: 0 — 0 px
      Xmax: 11000 — 550 px
      Ymin: 0 — 0 px
      Ymax: 8000 — 400 px
    Frame rate: 24 — 8.8 fixed point, frames per second  [0x11+0x2]
    Frame count: 2  [0x13+0x2]
  ▾ Tags  [0x15+0x15d]
    ▾ FileAttributes — 4 bytes  [0x15+0x6]
        Flags: 0x18 [ActionScript3 | HasMetadata]  [0x17+0x4]
    ▾ Metadata — 198 bytes  [0x1b+0xcc]
        XML: "<rdf:RDF xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"><rdf:Description rdf:about=\"\"><dc:title xmlns:dc=\"http://purl.org/dc/elements/1.1/\">fillyfoal</dc:title></rdf:Description></rdf:RDF>"  [0x21+0xc6]
    ▾ ScriptLimits — 4 bytes  [0xe7+0x6]
        Max recursion depth: 1000  [0xe9+0x2]
        Script timeout (s): 60  [0xeb+0x2]
    ▾ SetBackgroundColor — 3 bytes  [0xed+0x5]
        Background colour: "#336699"  [0xef+0x3]
    ▾ DefineBinaryData — 79 bytes  [0xf2+0x55]
        Character ID: 1  [0xf8+0x2]
        Reserved: 0  [0xfa+0x4]
      ▾ Data — 2×2, 8-bit RGB  [0xfe+0x49]
          Signature  [0xfe+0x8]
        ▾ IHDR — 2×2, 8-bit RGB  [0x106+0x19]
            Length: 13  [0x106+0x4]
            Type: "IHDR" — critical, public, unsafe to copy  [0x10a+0x4]
            Width: 2  [0x10e+0x4]
            Height: 2  [0x112+0x4]
            Bit depth: 8  [0x116+0x1]
            Color type: RGB (0x2)  [0x117+0x1]
            Compression method: deflate (0x0)  [0x118+0x1]
            Filter method: adaptive (five filter types) (0x0)  [0x119+0x1]
            Interlace method: None (0x0)  [0x11a+0x1]
            CRC: 0xfdd49a73 — valid  [0x11b+0x4]
        ▾ Image data — 1 IDAT chunk, 16 bytes compressed → 14 bytes of scanlines  [0x11f+0x1c]
          ▾ Compressed stream — zlib stream, 16 bytes  [0x127+0x10]
              CMF: 0x78 — deflate, 32 KiB window  [0x127+0x1]
              FLG: 0x9c — default compression  [0x128+0x1]
          ▾ Scanlines — 2 rows, 7 bytes each
              Row 0: None (0x0)  [#1:0x0+0x7]
              Row 1: None (0x0)  [#1:0x7+0x7]
          ▾ IDAT — 16 bytes  [0x11f+0x1c]
              Length: 16  [0x11f+0x4]
              Type: "IDAT" — critical, public, unsafe to copy  [0x123+0x4]
              Data  [0x127+0x10]
              CRC: 0x8b3f6e84 — valid  [0x137+0x4]
        ▾ IEND — end of image  [0x13b+0xc]
            Length: 0  [0x13b+0x4]
            Type: "IEND" — critical, public, unsafe to copy  [0x13f+0x4]
            CRC: 0xae426082 — valid  [0x143+0x4]
    ▾ SymbolClass — 17 bytes  [0x147+0x13]
        Count: 1  [0x149+0x2]
        FixtureImage: 1
    ▾ DefineSprite — 8 bytes  [0x15a+0xa]
        Sprite ID: 2  [0x15c+0x2]
        Frame count: 1  [0x15e+0x2]
      ▾ Tags  [0x160+0x4]
          ShowFrame — frame 0  [0x160+0x2]
          End — 0 bytes  [0x162+0x2]
    ▾ FrameLabel — 6 bytes  [0x164+0x8]
        Label: "start"  [0x166+0x6]
      ShowFrame — frame 0  [0x16c+0x2]
      ShowFrame — frame 1  [0x16e+0x2]
      End — 0 bytes  [0x170+0x2]
